--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+.btn{
+  font-family: "Raleway", sans-serif;
+    background-color: #ad9175 !important;
+    color: #fff;
+    padding: 10px 20px;
+    box-shadow: rgba(132, 104, 76, 0.2) 0px 4px 10px;
+    transition: all 0.4s ease-in-out;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  background-color: #3f4e60 !important;
+  color: #fff !important;
+  box-shadow: rgba(132, 104, 76, 0.4) 0px 6px 12px;
 }
