--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+}
+
 .btn{
   font-family: "Raleway", sans-serif;
     background-color: #ad9175 !important;
@@ -7,8 +12,55 @@
     transition: all 0.4s ease-in-out;
 }
 
+.rounded-3 {
+  border-radius: var(--bs-border-radius-lg) !important;
+}
+
 .btn:hover {
   background-color: #3f4e60 !important;
   color: #fff !important;
   box-shadow: rgba(132, 104, 76, 0.4) 0px 6px 12px;
+}
+
+.banner_form {
+  border: 2px solid #ad9175;
+  padding: 30px;
+  background-color: #fff;
+}
+
+form {
+  display: block;
+  margin-top: 0em;
+  unicode-bidi: isolate;
+}
+
+.master_div {
+  border: 1px solid #3f4e60;
+}
+
+.master_div h6 {
+  line-height: 50px;
+  border-bottom: 1px solid #3f4e60;
+}
+
+.gallery_sec {
+  background-color: #f7f7f7;
+  padding: 80px 0;
+}
+
+.ameniti_sec ::marker {
+  color: #ad9175;
+}
+
+footer {
+  background-color: #caa98a !important;
+  color: #fff;
+}
+
+.map_wrap {
+  border: 1px solid grey;
+  border-radius: 20px;
+  width: 80%;
+  height: 402px;
+  margin: auto;
 }
