--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
+.wd-100{
+  width: 100%;
+}
 
 .btn{
   font-family: "Raleway", sans-serif;
@@ -23,12 +26,12 @@ body {
 }
 
 .banner_form {
-  border: 2px solid #ad9175;
+  border: 3px solid #ad9175;
   padding: 30px;
   background-color: #fff;
   top: 15%;
   right: 10%;
-
+  position: absolute;
 }
 
 form {
@@ -77,7 +80,41 @@ footer {
   border-radius: 4px;
   justify-items: center;
 }
+.proj_sec .container {
+  background:#f7f7f7
+}
+.navbar .container a >  img{
+  width: 65%;
+}
+.ameniti_div {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.nav-item a{
+  border-bottom: 1px solid transparent;
+}
+.nav-item a:hover{
+  border-bottom: 1px solid #CAA88A;
+}
+.footer-links-desc{
+display: grid;
+grid-template-columns: 40% 1fr;
+}
+.newsletter{
+  width: 100%;
+  display: grid;
+  justify-items: center;
 
+}
+.newsletter .subscribe-input{
+  width: 50%;
+  border-radius: 10px 0 0 10px;
+}
+.susbcribe-button{
+  height: 60px;
+  border-radius: 0 10px 10px 0 !important;
+}
 @media screen and (max-width: 500px) {
   .navbar .container a >  img{
     width: 100px;
@@ -94,5 +131,13 @@ display: grid;
     gap: 10px;
     justify-items: center;
   }
-
+  .newsletter .subscribe-input{
+    width: 80%;
+    border-radius: 10px 0 0 10px;
+  }
+  .footer-links-desc{
+    display: grid;
+    grid-template-columns: none;
+    grid-template-rows: 1fr 1f !important;
+  }
 }
